# forgeops

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  config.py  docker-compose.yml  main.py  mcp_server.py  models.py  pyproject.toml  repos.json
.github/workflows/: ci.yml
commands/: __init__.py  add_repo.py  assign.py  attachments.py  create_issue.py  delete_issue.py  execution.py  list_issues.py  list_repos.py  migrate_issues.py  remove_repo.py  review.py  session.py  state.py  tasks.py  update_repo.py  view_issue.py
core/: __init__.py  database.py  db.py  file_manager.py  hooks.py  issue_tracker.py  repository_manager.py  state_engine.py  task_manager.py
docs/: ARCHITECTURE.md  NEXT_STEPS.md  PROBLEM.md  PURPOSE.md  ROADMAP.md  VISION.md
docs/archive/: bugfix-cleanup-2026-03-12.md
issues/: ISSUE-001.json  ISSUE-002.json  ISSUE-004.json  ISSUE-005.json
tests/: test_api.py  test_api_errors.py  test_commands.py  test_commands_phase2.py  test_database.py  test_db.py  test_file_manager.py  test_hooks.py  test_mcp.py  test_mcp_errors.py  test_models.py  test_phase2.py  test_property.py  test_repository_manager.py  test_state_exhaustive.py  test_task_manager.py
tutorials/: README.md  tutorial_issue_tracker.py
utils/: __init__.py  helpers.py  validators.py
