[project]
name = "jules-dev-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "rich",
    "sqlmodel",
    "typer",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "datetime-truncate",
]
